# DataSets

./: .env.example  .flake8  .gitattributes  .gitignore  .vercelignore  ALGORITHM_ARCHITECTURE_PLAN.md  ALL_6_BUGS_FIXED_FINAL.md  ALL_TASKS_COMPLETE.md  ANALYTICS_MISSING_SECTION_FIX.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BUG12_FINAL_RESOLUTION.md  BUG5_IS_TRAINED_FLAG.md  BUGFIXES.md  BUGFIX_RMSE_PERFORMANCE.md  CHANGELOG.md  CODE_RECOVERY_TODO.md  CODE_REVIEW_V2.1.2.md  COLOR_MIGRATION_SUMMARY.md  COLOR_SCHEME.md  CONTENT_BASED_COMPLETE.md  CONTENT_BASED_IMPLEMENTATION_STATUS.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED.md  DARK_MODE_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DERV_HYBRID_FIX_COMPLETE.md  DOCKER.md  DOCKER_IMPORT_FIX_SUMMARY.md  DOCKER_MEMORY_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_FIX_SUMMARY.md  FINAL_VALIDATION_REPORT.md  GIT_LFS_ANALYSIS.md  HYBRID_ALGORITHM_FIX_SUMMARY.md  HYBRID_FIX_GUIDE.md  IMPLEMENTATION_STATUS.md  ISSUE_RESOLVED.md  (+72 more)
.github/instructions/: reader.instructions.md
.streamlit/: config.toml  secrets.toml.example
app/: css_utils.py  main.py
app/assets/animations/: loading.json  recommendation.json  training.json
app/components/: __init__.py  algorithm_selector.py  genre_visualization.py  loading_animation.py  metric_cards.py  movie_card.py  onboarding.py  ui_helpers.py
app/pages/: 1_🏠_Home.py  2_🎬_Recommend.py  3_📊_Analytics.py  4_🔍_Search.py  5_🎬_Movie_Search.py
app/pages/backup/: 1_🏠_Home_V2.0_backup.py  2_🎬_Recommend.py.backup  3_📊_Analytics.py.backup
app/static/: main.css
app/styles/: custom_css.py  custom_css_backup.py
app/utils/: data_viz.py
config/: .env.development  .env.staging
data/ml-32m/: links.parquet  movies.parquet  movies_with_TMDB_image_links.csv  movies_with_TMDB_image_links.parquet  ratings.parquet  tags.parquet
docs/: ADR-001-KNN-Template-Method-Pattern.md  ADR-002-Content-Based-Feature-Engineering-Separation.md  ADR-003-Hybrid-Recommender-Strategy-Pattern.md  ADR-004-AlgorithmManager-Single-Responsibility-Decomposition.md
models/: content_based_model.pkl  hybrid_model.pkl  item_knn_model.pkl  model_manifest.json  model_metadata.json  svd_model.pkl  svd_model_sklearn.pkl  user_knn_model.pkl
scripts/: README.md  audit_models.py  backup.sh  benchmark.py  benchmark_model_loading.py  convert_csv_to_parquet.py  demo_script.md  emergency_save_model.py  final_benchmark.py  generate_changelog.py  migrate_models_to_joblib.py  optimize_models.py  rollback.ps1  rollback.sh  test_end_to_end.py  test_features.py  train_model.ps1  train_model.sh  train_models_joblib.py  validate_system.py  validate_todo_tasks.py
src/: __init__.py  data_processing.py  model_training.py  model_training_sklearn.py  recommendation_engine.py  recommendation_engine_sklearn.py  search_engine.py  svd_model_sklearn.py  utils.py
src/algorithms/: __init__.py  algorithm_manager.py  base_recommender.py  content_based_recommender.py  custom_algorithm.py  custom_metrics.py  filter_extensions.py  hybrid_recommender.py  item_knn_recommender.py  knn_base.py  model_state.py  plugin_system.py  svd_recommender.py  user_knn_recommender.py
src/analytics/: __init__.py  benchmark_engine.py
src/core/: cache.py  di_container.py  event_system.py  logging_module.py  validation.py
src/data/: repository.py
src/memory/: __init__.py  cache_manager.py  gc_optimizer.py  leak_detector.py  memory_limits.py  memory_monitor.py  model_cache.py  model_preloader.py  object_pool.py
src/performance/: __init__.py  batch_processor.py  benchmarks.py  caching.py  dataframe_optimizer.py  dtype_optimizer.py  lazy_loader.py  memory_profiler.py  pagination.py  popular_items.py
src/ui/: accessibility.py  i18n.py  keyboard_navigation.py  screen_reader.py  theme_system.py
src/utils/: __init__.py  cache.py  config.py  data_adapters.py  deprecation.py  dtype_optimization.py  env_config.py  error_handlers.py  export_formats.py  import_data.py  input_validation.py  lazy_imports.py  logging_config.py  lru_cache.py  memory_manager.py  memory_profiler.py  model_loader.py  model_slimming.py  model_validation.py  pagination.py  popular_items.py  secure_serialization.py  timeout_config.py
testing/: train_content_based.py  train_models_auto.py
tests/: TASK_9_VERIFICATION_REPORT.md  conftest.py  coverage_report.py  fixtures_factory.py  mock_services.py  train_all_models.py  train_item_knn_fast.py  train_item_knn_only.py  train_knn_models.py  verify_production_fix.py
(+13 files in other folders)
